--- a/assets/css/cha_detail.css
+++ b/assets/css/cha_detail.css
@@ -1996,8 +1996,8 @@ h2 {
 #recommended-party-content.party-grid-layout .party-section {
     width: calc(100% - 20px);
 }
-/* 파티 리스트 폭을 카드 폭에 맞추기 (기존 min-width: 440px 무시) */
-#recommended-party-content .party-list {
+/* 파티 리스트 폭을 카드 폭에 맞추기 (기존 min-width: 440px 무시) - 2열 모드에서만 */
+#recommended-party-content.party-grid-layout .party-list {
     min-width: 0;
     width: 100%;
 }
