--- a/assets/js/home/carousel.css
+++ b/assets/js/home/carousel.css
@@ -2,3 +2,9 @@
 .char-img.middle[alt*="유카리"] {
   transform: translateY(-50%) scale(1.25) !important; right: 14% !important;
 }
+
+
+.char-img.front[src*="P5DSN_-_Caroline_and_Justine"] {
+  transform: translateY(-25%) scale(1.4) ;
+  right: 14% ;
+}
