--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -60,10 +60,21 @@
 /* 복사 실패 상태 */
 .code-item.copy-failed { background-color: rgba(255, 100, 100, 0.3); border-color: #ff6464; color: #ffcccc; }
 
+.recent-update-content-text { width: 100%; display: grid; grid-template-columns: auto auto 1fr; gap: 6px; align-items: start; }
+.recent-update-content-text .date, .recent-update-content-text .version{ white-space: nowrap; font-size: 12px; font-weight: 300; padding: 0px; color: rgba(255, 255, 255, 0.3); }
+.recent-update-content-text .content { padding: 0px 0px 4px 0px; width: 100%; font-size: 12px; }
+.recent-update-content-text .content p { margin: 0; font-weight: 300; color: rgba(255, 255, 255, 0.7); font-size:12px;}
+.show-more-updates-btn { background: rgba(255, 255, 255, 0.1); border: 1px solid #666; color: #fff; padding: 8px; border-radius: 4px; cursor: pointer; transition: all 0.2s ease; display: inline-flex; align-items: center; margin: 20px auto 0 auto; position: relative; width: 100%; }
+.show-more-updates-btn:hover { background: rgba(255, 255, 255, 0.3) !important; border-color: rgb(255, 255, 255, 0.1) !important; }
+
 /* 반응형 스타일 */
-@media screen and (max-width: 1200px) { .about-content { padding: 10px; }
+@media screen and (max-width: 1200px) { 
+    .about-content { padding: 10px; }
     .modal-content { width: 90%; margin: 20% auto; padding: 20px; }
     .donation-methods { flex-direction: column; }
     .exchange-codes { grid-template-columns: 1fr; max-height: 300px; }
     .code-item { font-size: 12px; }
-} 
+    .recent-update-content-text { grid-template-columns: 1fr; }
+    .recent-update-content-text .date, .recent-update-content-text .version { display: none; }
+    .show-more-updates-btn { margin: 10px auto 0 auto; }
+}
